mobile nav fix overlap caused by heading

--- a/src/style/components/_nav.scss
+++ b/src/style/components/_nav.scss
@@ -128,6 +128,7 @@
                 visibility: hidden;
                 height: calc(100vh - 64px);
                 overflow: auto;
+                z-index: 99;
                 
                 li > a {
                     display: block;
